dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: facuxfdz
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - facuxfdz.com
      secretName: facuxfdz-app-tls
  rules:
  - host: facuxfdz.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example-app
            port: 
              number: 8006
